# KoMmApp

./: README.md  build.gradle  config.gradle  gradle.properties  settings.gradle  version.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main_nav_menu.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
library_common/: build.gradle
library_common/src/main/: AndroidManifest.xml
library_common/src/main/res/anim/: slide_close_in_right.xml  slide_close_out_left.xml  slide_enter_in_right.xml  slide_enter_out_left.xml
library_common/src/main/res/drawable/: selector_indicator.xml
library_res/: build.gradle
library_res/src/main/: AndroidManifest.xml
module_api/: MVVM实践.txt  build.gradle  笔记-Android调用Python.txt  笔记-NDK开发.txt
module_api/src/main/: AndroidManifest.xml
module_api/src/main/cpp/: CMakeLists.txt  native.cpp
module_api/src/main/python/: hello.py
module_data/: build.gradle
module_data/src/main/: AndroidManifest.xml
module_ent/src/main/: AndroidManifest.xml
module_girls/: build.gradle
module_girls/src/main/: AndroidManifest.xml
module_home/src/main/: AndroidManifest.xml
module_login/src/main/: AndroidManifest.xml
module_me/: build.gradle
module_me/src/main/: AndroidManifest.xml
module_ui/src/main/: AndroidManifest.xml
tech_dev/: build.gradle
tech_dev/src/main/: AndroidManifest.xml
tech_mvvm/src/main/: AndroidManifest.xml
(+243 files in other folders)
